package Mundial;

import java.util.ArrayList;

public class Llave extends EtapaMundial{
    public Llave(){

    }
    public Llave(ArrayList<Equipo>equipos){

    }

    @Override
    public ArrayList<Equipo> getEquipoQueAvanza() {
        return super.getEquipoQueAvanza();
    }
}
