package Mundial;

public class Resultado {
    private int golesLocal;
    private int golesVisita;

    public int getGolesLocal() {
        return golesLocal;
    }

    public void setGolesLocal(int golesLocal) {
        this.golesLocal = golesLocal;
    }

    public int getGolesVisita() {
        return golesVisita;
    }

    public void setGolesVisita(int golesVisita) {
        this.golesVisita = golesVisita;
    }
    public boolean ganoLocal;
    public boolean empate;

}
